[FIX] Fixed form layout vertical alignment
bzr revid: fme@openerp.com-20120326121449-tbun2iy7yw7vyhbl

--- a/addons/web/static/src/css/base_old.css
+++ b/addons/web/static/src/css/base_old.css
@@ -930,6 +930,7 @@ label.error {
 }
 .openerp td.oe_form_group_cell {
     padding: 2px;
+    height: 25px;
 }
 .openerp td.oe_form_field_translatable,
 .openerp td.oe_form_field_many2one,
@@ -940,7 +941,7 @@ label.error {
 .openerp td.oe_form_field_boolean {
     padding-top: 4px;
 }
-.openerp td.oe_form_group_cell.oe_form_group {
+.openerp td.oe_form_group_cell.oe_form_group_nested {
     padding: 0;
 }
 .openerp .required.error {
